fix white space caused by ripple effect div overlay
ripple effect div caused white space at the end of li element(s).
showing element on click and setting timeout to display: none;
afterwords

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
   background-color: #2dc32c;
 }
 
+.mdl-ripple{
+	display: none;
+	border: 1px solid hotpink;
+}
+
+.show{display:inherit;}
+
 /* fab button */
 .mdl-button--fab {
   position: fixed;
